--- a/movie-reviews/src/index.css
+++ b/movie-reviews/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family:  'American Typewriter', serif, monospace;
+  padding: 50px 50px;
 }
 
 code {
@@ -8,7 +9,6 @@ code {
     monospace;
 }
 
-/*NAVBAR STYLING*/
 .topnav {
   background-color: #333;
   overflow: hidden;
@@ -35,3 +35,16 @@ h1, h2, h3 {
   font-weight: bold;
   padding-top: 50px;
 }
+.formContainer{
+  max-width: 800px;
+  border: 5px solid #333;
+  justify-content: center;
+  text-align: center;
+  margin:auto;
+  padding: 50px;
+}
+
+.input-group-text{
+  text-align: center;
+}
+
