--- a/movie-reviews/src/index.css
+++ b/movie-reviews/src/index.css
@@ -1,12 +1,13 @@
 body {
   margin: 0;
   font-family:  'American Typewriter', serif, monospace;
-  padding: 50px 50px;
+  padding: 20px 20px;
+  
 }
 
 code {
   font-family:  'American Typewriter', serif,
-    monospace;
+    monospace;    
 }
 
 .topnav {
@@ -35,6 +36,7 @@ h1, h2, h3 {
   font-weight: bold;
   padding-top: 50px;
 }
+
 .formContainer{
   max-width: 800px;
   border: 5px solid #333;
@@ -42,6 +44,7 @@ h1, h2, h3 {
   text-align: center;
   margin:auto;
   padding: 50px;
+  background-color: white;
 }
 
 .input-group-text{
