--- a/movie-reviews/src/index.css
+++ b/movie-reviews/src/index.css
@@ -44,7 +44,7 @@ h1, h2, h3 {
   text-align: center;
   margin:auto;
   padding: 50px;
-  background-color: white;
+  background-color: rgb(219, 213, 208);
 }
 
 .input-group-text{
