--- a/movie-reviews/src/App.css
+++ b/movie-reviews/src/App.css
@@ -5,10 +5,10 @@
   padding-bottom: 100px; 
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-family:  'American Typewriter', serif, monospace;
   font-weight: bold;
-  padding-top: 50px;
+  padding-top: 20px;
 }
 
 .input-group{
